# qr

./: .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  main.cpp
inc/: qr.h  qr_misc.h  qr_tables.h
